infra/k8s/posts-depl.yml
# Deployment is available inside apps/v1. Pod is in just v1
apiVersion: apps/v1

kind: Deployment

metadata:
  name: posts-depl

# Deployment specification
spec:
  # Number of pods to create for a specific image
  replicas: 1

  # Selector and template/metadata are working together to identify the pods
  # Find all pods with the label "app: posts"
  selector:
    matchLabels:
      app: posts

  # Config of the pod itself
  template:
    # Have a label called "app: posts"
    metadata:
      labels:
        app: posts

    # Pod specification
    spec:
      containers:
        - name: posts
          image: ammuuu/posts
