infra/k8s/event-bus-depl.yml
# Deployment is available inside apps/v1. Pod is in just v1
apiVersion: apps/v1

kind: Deployment

metadata:
  name: event-bus-depl

# Deployment specification
spec:
  # Number of pods to create for a specific image
  replicas: 1

  # Selector and template/metadata are working together to identify the pods
  # Find all pods with the label "app: event-bus"
  selector:
    matchLabels:
      app: event-bus

  # Config of the pod itself
  template:
    # Have a label called "app: event-bus". Think of this like HTML class names
    metadata:
      labels:
        app: event-bus

    # Pod specification
    spec:
      containers:
        - name: event-bus
          image: ammuuu/events

# By doing this multiple services can be added into a single file
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  # Accessible from other pods within the cluster
  type: ClusterIP
  selector:
    # Select pods with label app: event-bus
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
