infra/k8s/posts-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  # Exposes a port outside the cluster. Used only in development purposes.
  # In the real world, use load balancers with ingress controllers
  # A load balaner tells the cluster to reach outside into the cloud provider and setup a load balancer outside the cluster
  # With the goal of getting traffic from outside into the cluster
  # A Ingress controller is used to route the traffic to the different pods
  type: NodePort

  # Pull labels of "app: posts"
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP

      # NodePort service is listening on port 4000. It can be any port. The port accessible outside the cluster
      # Is the port that is present when you list the services in the CLI
      port: 4000

      # Our posts service listens on port 4000
      targetPort: 4000
