infra/k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1
# An ingress service
kind: Ingress
metadata:
  name: ingress-srv
spec:
  # Use nginx for routing rules
  ingressClassName: nginx

  # Set of routing rules
  rules:
    # Use posts.com as the URL for posts service pod
    - host: posts.com
      http:
        paths:
          # posts service is listening on /posts endpoint
          # Send request to the ClusterIP service which will in turn call the container
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: posts-clusterip-srv
                port:
                  number: 4000
